--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 98.6vh;
   margin-bottom: 10px;
   margin-right: 20px;
 }
@@ -49,7 +49,7 @@ h2{
   text-decoration: none;
 
   appearance: none;
-  background-color: #FAFBFC;
+  background-color: #e2e1e1;
   border: 1px solid rgba(27, 31, 35, 0.15);
   border-radius: 6px;
   box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
