--- a/src/pages/MeusFavoritos.css
+++ b/src/pages/MeusFavoritos.css
@@ -1,3 +1,13 @@
+ul, li{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: 1px;
+}
+
 .Container{
     
     padding: 0 20px;
@@ -29,7 +39,7 @@
     width: 50%;
     height: 400px;
 
-    background-color: #e7e7e7;
+    background-color:#f5f5f5;
     color: #000;
     font-size: 20px;
 
@@ -76,4 +86,46 @@
 .btn-Voltar:hover, .btn-Excluir-Favoritar:hover{
 
     transform: scale(1.1);
+}
+
+.btn-disabled {
+    background-color: #ccc;
+    border-color: #999;
+    color: #999;
+    cursor: not-allowed;
+  }
+
+.selectLi{
+    background-color: #f5f5f5;
+    color: #242424;
+    padding: .15rem .5rem;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    line-height: 1.15;
+    
+    transition: all 0.1s ease-in-out;
+}
+
+.selectLi:hover {
+    outline: 1px solid lightgrey;
+}
+
+.selected {
+    background-color: #dcdcdc;
+    color: #242424;
+    padding: .15rem .5rem;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    line-height: 1.15;
+    box-shadow: 0px 10px 20px -18px;
+    transform: scale(1.1);
+    
+    transition: all 0.1s ease-in-out;
+
+}
+
+.selected:hover {
+    outline: 1px solid rgb(56, 56, 56);
 }
