--- a/src/pages/MeusFavoritos.css
+++ b/src/pages/MeusFavoritos.css
@@ -39,12 +39,20 @@ ul, li{
     width: 50%;
     height: 400px;
 
+    column-gap: 10px; 
+
+    overflow-y: scroll; 
+
     background-color:#f5f5f5;
     color: #000;
     font-size: 20px;
 
     border: 1.5px solid #5e5e5e;
     border-radius: 6px;
+}
+
+.lista-favoritos.two-columns {
+    columns: 2; 
 }
 
 .botoes-Favoritos{
